<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bakhground_sbmptn" android:layout_width="fill_parent" android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <HorizontalScrollView android:id="@id/horizontalScrollView1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ScrollView android:id="@id/scrollView2" android:layout_width="248dp" android:layout_height="fill_parent">
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <Button android:id="@id/CLEAR" android:background="@drawable/b_updaten5" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="12.0dip" android:text="@string/create" />
                    <TextView android:textColor="#ffffffff" android:id="@id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="12.0dip" android:text="@string/manage" />
                    <LinearLayout android:orientation="vertical" android:background="@drawable/b_updaten2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="12.0dip">
                        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content"
                            android:weightSum="1">
                            <TextView android:textColor="#ffffffff" android:id="@id/TextView023" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="12.0dip" android:text="@string/manage_saving" />
                            <EditText android:id="@id/sum_saving" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="5.0dip" android:inputType="number" />
                        </LinearLayout>
                        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <TextView android:textColor="#ffffffff" android:id="@id/TextView024" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="8.0dip" android:text="@string/manage_spending" />
                            <EditText android:id="@id/sum_spending" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="5.0dip" android:inputType="number" />
                        </LinearLayout>
                        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <TextView android:textColor="#ffffffff" android:id="@id/TextView025" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="12.0dip" android:text="@string/manage_total" />
                            <EditText android:id="@id/sum_total" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="5.0dip" android:inputType="number" />
                        </LinearLayout>
                    </LinearLayout>
                    <TextView android:textColor="#ffffffff" android:id="@id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="12.0dip" android:text="@string/update" />
                    <LinearLayout android:orientation="vertical" android:background="@drawable/b_updaten4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="12.0dip">
                        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                            <RadioGroup android:orientation="horizontal" android:id="@id/radiogroup1" android:padding="0.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0px">
                                <RadioButton android:textAppearance="?android:textAppearanceSmall" android:id="@id/uradio1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/manage_saving" />
                                <RadioButton android:textAppearance="?android:textAppearanceSmall" android:id="@id/uradio2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/manage_spending" />
                            </RadioGroup>
                        </LinearLayout>
                        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                            <EditText android:id="@id/inGetId" android:layout_width="82.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:ems="10" />
                            <Button android:id="@id/btnGetId" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:text="@string/btnGetRow" />
                        </LinearLayout>
                        <EditText android:id="@id/inUpdateNama" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" />
                        <EditText android:id="@id/inUpdateHobi" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:ems="10" />
                        <Button android:id="@id/btnUpdate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/btnUpdateRow" />
                    </LinearLayout>
                    <TextView android:textColor="#ffffffff" android:id="@id/textView33" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:layout_marginTop="20.0dip" android:text="@string/Delete" />
                    <LinearLayout android:orientation="vertical" android:background="@drawable/b_updaten3" android:layout_width="201.0dip" android:layout_height="wrap_content" android:layout_margin="12.0dip">
                        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                            <RadioGroup android:orientation="horizontal" android:id="@id/radiogroup2" android:padding="0.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0px">
                                <RadioButton android:textAppearance="?android:textAppearanceSmall" android:id="@id/dradio1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/manage_saving" />
                                <RadioButton android:textAppearance="?android:textAppearanceSmall" android:id="@id/dradio2" android:layout_width="101.0dip" android:layout_height="wrap_content" android:text="@string/manage_spending" />
                            </RadioGroup>
                        </LinearLayout>
                        <EditText android:id="@id/idDelete" android:layout_width="179.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" />
                        <Button android:id="@id/btnDel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/btnDel" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
            <View android:id="@id/view2" android:background="#ff0358a7" android:layout_width="1.0dip" android:layout_height="wrap_content" />
            <ScrollView android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:textColor="#ffffffff" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="280.0dip">
                    <TextView android:textColor="#ffffffff" android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="12.0dip" android:text="@string/Saving_Table" android:layout_weight="16.0" />
                    <TableLayout android:textColor="#ffffffff" android:id="@id/tabel_data" android:background="#ff81dee4" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="13.0dip">
                        <TableRow android:textColor="#ffffffff" android:id="@id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
                            <TextView android:textStyle="bold" android:id="@id/no_id" android:layout_width="50.0dip" android:layout_height="wrap_content" android:text="@string/nomorLabel" />
                            <TextView android:textStyle="bold" android:id="@id/waktu_id" android:layout_width="250.0dip" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/time" />
                            <TextView android:textStyle="bold" android:id="@id/nama_id" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/namaLabel" />
                            <TextView android:textStyle="bold" android:id="@id/hobi_id" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/hobiLabel" />
                        </TableRow>
                    </TableLayout>
                    <TextView android:textColor="#ffffffff" android:id="@id/TextView012" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="20.0dip" android:text="@string/Spending_Table" android:layout_weight="16.0" />
                    <TableLayout android:textColor="#ffffffff" android:id="@id/tabel_data2" android:background="#ffe6fc51" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="13.0dip">
                        <TableRow android:textColor="#ffffffff" android:id="@id/tableRow12" android:layout_width="wrap_content" android:layout_height="wrap_content">
                            <TextView android:textStyle="bold" android:id="@id/no_id2" android:layout_width="50.0dip" android:layout_height="wrap_content" android:text="@string/nomorLabel" />
                            <TextView android:textStyle="bold" android:id="@id/waktu_id2" android:layout_width="250.0dip" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/time" />
                            <TextView android:textStyle="bold" android:id="@id/nama_id2" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/namaLabel" />
                            <TextView android:textStyle="bold" android:id="@id/hobi_id2" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/hobiLabel" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </HorizontalScrollView>
    <View android:id="@id/view2" android:background="#ff909090" android:layout_width="wrap_content" android:layout_height="1.0dip" />
    <View android:id="@id/view2" android:background="#ff909090" android:layout_width="wrap_content" android:layout_height="1.0dip" />
</LinearLayout>