<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:textColor="#ffffffff" android:orientation="vertical" android:background="@drawable/bakhground_sbmptn" android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/textView1" android:background="#fff87f44" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="Menu Pengeluaran" android:layout_alignRight="@id/textView233" android:layout_alignParentTop="true" android:textAlignment="4" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="#ffffffff" android:id="@id/textView33" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="46.0dip" android:text="@string/total" android:layout_below="@id/textView23" android:layout_alignLeft="@id/textView23" />
        <EditText android:id="@id/inNama2" android:layout_width="150.0dip" android:layout_height="wrap_content" android:ems="10" android:layout_below="@id/textView23" android:layout_alignLeft="@id/textView33" android:layout_alignRight="@id/inHobi2">
            <requestFocus />
        </EditText>
        <EditText android:id="@id/inHobi2" android:layout_width="100.0dip" android:layout_height="wrap_content" android:ems="10" android:layout_below="@id/textView33" android:layout_alignLeft="@id/textView33" android:layout_alignRight="@id/dateAndTime2" android:inputType="number" />
        <TextView android:textColor="#ffffffff" android:id="@id/textView13" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:layout_marginTop="20.0dip" android:text="@string/time" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <EditText android:id="@id/dateAndTime2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="13.0dip" android:ems="10" android:layout_below="@id/textView13" android:layout_alignLeft="@id/textView13" />
        <Button android:id="@id/timeBtn3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settime" android:layout_toRightOf="@id/dayBtn3" android:layout_below="@id/dateAndTime2" style="?android:attr/buttonStyleSmall" />
        <TextView android:textColor="#ffffffff" android:id="@id/textView23" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/activity" android:layout_below="@id/timeBtn3" android:layout_alignLeft="@id/dateAndTime2" />
        <Button android:id="@id/dayBtn3" android:layout_width="150.0dip" android:layout_height="wrap_content" android:text="@string/setdate" android:layout_above="@id/textView23" android:layout_alignLeft="@id/textView23" style="?android:attr/buttonStyleSmall" />
        <Button android:textColor="#ffffffff" android:id="@id/btnAdd33" android:background="@drawable/add" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="27.0dip" android:layout_below="@id/inHobi2" android:layout_alignRight="@id/inHobi2" />
    </RelativeLayout>
</LinearLayout>